// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSON output snapshots > produces stable JSON structure for failing result 1`] = `
{
  "decision": "NO_SHIP",
  "meta": {
    "cliVersion": "0.1.0",
    "nodeVersion": "v20.0.0",
    "platform": "linux",
    "timestamp": "2026-02-01T12:00:00.000Z",
  },
  "result": {
    "breakdown": {
      "invariants": {
        "failed": 1,
        "passed": 0,
        "score": 0,
        "total": 1,
      },
      "postconditions": {
        "failed": 1,
        "passed": 1,
        "score": 50,
        "total": 2,
      },
      "scenarios": {
        "failed": 1,
        "passed": 1,
        "score": 50,
        "total": 2,
      },
      "temporal": {
        "failed": 0,
        "passed": 1,
        "score": 100,
        "total": 1,
      },
    },
    "clauses": [
      {
        "category": "postcondition",
        "duration": 12,
        "file": "specs/payment.isl",
        "line": 15,
        "name": "transfer_deducts_sender_balance",
        "status": "passed",
      },
      {
        "actual": 100,
        "category": "postcondition",
        "column": 5,
        "duration": 8,
        "error": "Receiver balance not updated correctly",
        "expected": 150,
        "expression": "receiver.balance == old(receiver.balance) + amount",
        "file": "specs/payment.isl",
        "impact": "critical",
        "line": 16,
        "name": "transfer_credits_receiver_balance",
        "status": "failed",
        "suggestedFix": "Check that transfer() adds amount to receiver balance",
      },
      {
        "actual": false,
        "category": "invariant",
        "duration": 5,
        "error": "Invariant violated: balance became negative",
        "expected": true,
        "expression": "account.balance >= 0",
        "file": "specs/payment.isl",
        "impact": "high",
        "line": 22,
        "name": "balance_never_negative",
        "status": "failed",
        "suggestedFix": "Add balance check before deduction",
      },
      {
        "category": "scenario",
        "duration": 32,
        "error": "Transfer should have been rejected but succeeded",
        "file": "specs/payment.isl",
        "impact": "medium",
        "line": 35,
        "name": "insufficient_funds_rejection",
        "status": "failed",
      },
      {
        "category": "scenario",
        "duration": 45,
        "file": "specs/payment.isl",
        "line": 30,
        "name": "successful_transfer_scenario",
        "status": "passed",
      },
      {
        "category": "temporal",
        "duration": 23,
        "file": "specs/payment.isl",
        "line": 40,
        "name": "transfer_completes_within_timeout",
        "status": "passed",
      },
    ],
    "confidence": 85,
    "duration": 125,
    "implFile": "src/payment.ts",
    "islVersion": "0.1.0",
    "recommendation": "not_ready",
    "score": 50,
    "specFile": "specs/payment.isl",
    "success": false,
    "timestamp": "2026-02-01T12:00:00.000Z",
  },
  "schemaVersion": "1.0",
}
`;

exports[`JSON output snapshots > produces stable JSON structure for passing result 1`] = `
{
  "decision": "SHIP",
  "meta": {
    "cliVersion": "0.1.0",
    "nodeVersion": "v20.0.0",
    "platform": "linux",
    "timestamp": "2026-02-01T12:00:00.000Z",
  },
  "result": {
    "breakdown": {
      "invariants": {
        "failed": 0,
        "passed": 1,
        "score": 100,
        "total": 1,
      },
      "postconditions": {
        "failed": 0,
        "passed": 2,
        "score": 100,
        "total": 2,
      },
      "scenarios": {
        "failed": 0,
        "passed": 1,
        "score": 100,
        "total": 1,
      },
      "temporal": {
        "failed": 0,
        "passed": 1,
        "score": 100,
        "total": 1,
      },
    },
    "clauses": [
      {
        "category": "postcondition",
        "duration": 12,
        "file": "specs/payment.isl",
        "line": 15,
        "name": "transfer_deducts_sender_balance",
        "status": "passed",
      },
      {
        "category": "postcondition",
        "duration": 8,
        "file": "specs/payment.isl",
        "line": 16,
        "name": "transfer_credits_receiver_balance",
        "status": "passed",
      },
      {
        "category": "invariant",
        "duration": 5,
        "file": "specs/payment.isl",
        "line": 22,
        "name": "balance_never_negative",
        "status": "passed",
      },
      {
        "category": "scenario",
        "duration": 45,
        "file": "specs/payment.isl",
        "line": 30,
        "name": "successful_transfer_scenario",
        "status": "passed",
      },
      {
        "category": "temporal",
        "duration": 23,
        "file": "specs/payment.isl",
        "line": 40,
        "name": "transfer_completes_within_timeout",
        "status": "passed",
      },
    ],
    "confidence": 95,
    "duration": 93,
    "implFile": "src/payment.ts",
    "islVersion": "0.1.0",
    "recommendation": "production_ready",
    "score": 100,
    "specFile": "specs/payment.isl",
    "success": true,
    "timestamp": "2026-02-01T12:00:00.000Z",
  },
  "schemaVersion": "1.0",
}
`;

exports[`JSON output snapshots > produces stable minimal JSON 1`] = `"{"decision":"SHIP","score":100,"passed":5,"failed":0}"`;
